homepage case-studies mobile styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,39 @@
 <html>
-  <head>
-    <title>Planchette</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-  </head>
-  <body>
+<head>
+	<title>Penrose Stylebook</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	
 
-    
-    <script src="javascripts/main.js"></script>
-  </body>
+	<div class="site-header">
+		<h1 class="logo">Penrose.</h1>
+		<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
+	</div>
+	
+	<article class="case-study">
+		<header class="article-header">
+			<span class="label">Case Study</span>
+			<h1 class="title">Making personal data into useful data</h1>
+			<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+		</header>
+		<img class="cover-image" src="images/jon-post.jpg">
+		<a href="#" class="readmore-link">Read Case</a>
+	</article>
+
+	<article class="case-study">
+		<header class="article-header">
+			<span class="label">Case Study</span>
+			<h1 class="title">Making personal data into useful data</h1>
+			<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+		</header>
+		<img class="cover-image" src="images/planchette.jpg">
+		<a href="#" class="readmore-link">Read Case</a>
+	</article>
+
+
+	
+
+	<script src="javascripts/main.js"></script>
+</body>
 </html>
