adds gramble item styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
 	
 
 	<div class="site-header">
-		<h1 class="logo">Penrose.</h1>
-		<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
+		<header>
+			<h1 class="logo">Penrose.</h1>
+			<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
+		</header>
 	</div>
 	
 	<article class="case-study">
@@ -30,6 +32,23 @@
 		<img class="cover-image" src="images/planchette.jpg">
 		<a href="#" class="readmore-link">Read Case</a>
 	</article>
+	
+	<section class="gramble-container">
+		<header class="gramble-header">
+			<h1>Gramble</h1>
+			<p class="intropara">This is the Gramble</p>
+		</header>
+		<a class="gramble-item" href="#">
+			<img class="background-image" src="images/metropolis.jpg">
+			<div class="grambleitem-content">
+				<header class="article-header">
+					<h1 class="title">The Robots Are Coming</h1>
+					<p class="excerpt">John Lanchester on what automation means for economies (and people)</p>
+				</header>
+				<span href="#" class="readmore-link">Open Link</span>
+			</div>
+		</a>
+	</section>
 
 
 	
