--- a/src/index.html
+++ b/src/index.html
@@ -5,40 +5,41 @@
 </head>
 <body>
 	
+	<section class="home-hero">
+		<div class="site-header">
+			<header>
+				<h1 class="logo">Penrose.</h1>
+				<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
+			</header>
+		</div>
+		
+		<article class="case-study">
+			<header class="article-header">
+				<span class="label">Case Study</span>
+				<h1 class="title">Making personal data into useful data</h1>
+				<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+			</header>
+			<img class="cover-image" src="images/jon-post.jpg">
+			<a href="#" class="readmore-link">Read Case</a>
+		</article>
 
-	<div class="site-header">
-		<header>
-			<h1 class="logo">Penrose.</h1>
-			<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
-		</header>
-	</div>
-	
-	<article class="case-study">
-		<header class="article-header">
-			<span class="label">Case Study</span>
-			<h1 class="title">Making personal data into useful data</h1>
-			<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
-		</header>
-		<img class="cover-image" src="images/jon-post.jpg">
-		<a href="#" class="readmore-link">Read Case</a>
-	</article>
-
-	<article class="case-study">
-		<header class="article-header">
-			<span class="label">Case Study</span>
-			<h1 class="title">Making personal data into useful data</h1>
-			<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
-		</header>
-		<img class="cover-image" src="images/planchette.jpg">
-		<a href="#" class="readmore-link">Read Case</a>
-	</article>
+		<article class="case-study">
+			<header class="article-header">
+				<span class="label">Case Study</span>
+				<h1 class="title">Making personal data into useful data</h1>
+				<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+			</header>
+			<img class="cover-image" src="images/planchette.jpg">
+			<a href="#" class="readmore-link">Read Case</a>
+		</article>
+	</section>
 	
 	<section class="gramble-container">
 		<header class="gramble-header">
 			<h1>Gramble</h1>
 			<p class="intropara">This is the Gramble</p>
 		</header>
-		<a class="gramble-item" href="#">
+		<a class="gramble-item">
 			<img class="background-image" src="images/metropolis.jpg">
 			<div class="grambleitem-content">
 				<header class="article-header">
