adds footer and client strips

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 			<h1>Gramble</h1>
 			<p class="intropara">This is the Gramble</p>
 		</header>
-		<a class="gramble-item">
+		<a class="gramble-item"2>
 			<img class="background-image" src="images/metropolis.jpg">
 			<div class="grambleitem-content">
 				<header class="article-header">
@@ -49,6 +49,35 @@
 				<span href="#" class="readmore-link">Open Link</span>
 			</div>
 		</a>
+	</section>
+	<section class="client-strip">
+		<article class="client-square">
+			<img src="images/warner-music-logo.svg" alt="">
+		</article>
+		<article class="client-square">
+			<img src="images/anna-freud-centre-logo.svg" alt="">
+		</article>
+	</section>
+	<section class="footer-strip">
+		<ul class="footer-menu">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Work</a></li>
+			<li><a href="#">Content</a></li>
+			<li><a href="#">Stimulation</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+		<p class="footer-details">
+			© Penrose Studio Ltd <br>
+			B&amp;W Building, 74 Rivington St, London EC2A 3AY <br>
+			Company number: 06947690
+		</p>
+		<div class="footer-contactbox">
+			<h2>Talk to us</h2>
+			<p>We're always interested in hearing about new ideas, and we care about making good things happen. So get in touch to talk about your project.</p>
+			<a href="tel:000" class="phone-number">0788 4421 348</a>
+			<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
+		</div>
 	</section>
 
 
