makes gramble responsive

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,53 @@
 				<span href="#" class="readmore-link">Open Link</span>
 			</div>
 		</a>
+		<a class="gramble-item"2>
+			<div class="grambleitem-content">
+				<header class="article-header">
+					<h1 class="title">Minimum Viable Audience</h1>
+					<p class="excerpt">Build an audience before you build a business</p>
+				</header>
+				<span href="#" class="readmore-link">Open Link</span>
+			</div>
+		</a>
+		<a class="gramble-item"2>
+			<img class="background-image" src="images/metropolis.jpg">
+			<div class="grambleitem-content">
+				<header class="article-header">
+					<h1 class="title">Seneca</h1>
+					<p class="excerpt">Micro-services toolkit for Node.js</p>
+				</header>
+				<span href="#" class="readmore-link">Open Link</span>
+			</div>
+		</a>
+		<a class="gramble-item"2>
+			<div class="grambleitem-content">
+				<header class="article-header">
+					<h1 class="title">Writing code for humans</h1>
+					<p class="excerpt">Writing JavaScript like poetry</p>
+				</header>
+				<span href="#" class="readmore-link">Open Link</span>
+			</div>
+		</a>
+		<a class="gramble-item"2>
+			<img class="background-image" src="images/metropolis.jpg">
+			<div class="grambleitem-content">
+				<header class="article-header">
+					<h1 class="title">Shumpeter: Author-preneurship</h1>
+					<p class="excerpt">How to game best seller lists! Cites Eric Ries' Lean Startup</p>
+				</header>
+				<span href="#" class="readmore-link">Open Link</span>
+			</div>
+		</a>
+		<a class="gramble-item"2>
+			<div class="grambleitem-content">
+				<header class="article-header">
+					<h1 class="title">Prose.io</h1>
+					<p class="excerpt">A content editor for GitHub</p>
+				</header>
+				<span href="#" class="readmore-link">Open Link</span>
+			</div>
+		</a>
 	</section>
 	<section class="client-strip">
 		<article class="client-square">
