--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
 <body>
 	
 	<section class="home-hero">
+		<div class="cover-image-container">
+			
+		</div>
 		<div class="site-header">
 			<header>
 				<h1 class="logo">Penrose.</h1>
@@ -59,7 +62,7 @@
 			</div>
 		</a>
 		<a class="gramble-item"2>
-			<img class="background-image" src="images/metropolis.jpg">
+			<img class="background-image" src="images/seneca.jpg">
 			<div class="grambleitem-content">
 				<header class="article-header">
 					<h1 class="title">Seneca</h1>
@@ -78,7 +81,7 @@
 			</div>
 		</a>
 		<a class="gramble-item"2>
-			<img class="background-image" src="images/metropolis.jpg">
+			<img class="background-image" src="images/books.jpg">
 			<div class="grambleitem-content">
 				<header class="article-header">
 					<h1 class="title">Shumpeter: Author-preneurship</h1>
@@ -122,7 +125,7 @@
 		<div class="footer-contactbox">
 			<h2>Talk to us</h2>
 			<p>We're always interested in hearing about new ideas, and we care about making good things happen. So get in touch to talk about your project.</p>
-			<a href="tel:000" class="phone-number">0788 4421 348</a>
+			<a href="tel:000" class="phone-number">0788 4421 348</a><br>
 			<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
 		</div>
 	</section>
