adds responsive styles for client strip

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 	</section>
 	
 	<section class="gramble-container">
-		<header class="gramble-header">
+		<header class="section-header">
 			<h1>Gramble</h1>
 			<p class="intropara">This is the Gramble</p>
 		</header>
@@ -101,8 +101,21 @@
 		</a>
 	</section>
 	<section class="client-strip">
+		<header class="section-header">
+			<h1>Selected clients</h1>
+			<p class="intropara">Some of the people we've had the pleasure of working with&hellip;</p>
+		</header>
 		<article class="client-square">
 			<img src="images/warner-music-logo.svg" alt="">
+		</article>
+		<article class="client-square">
+			<img src="images/anna-freud-centre-logo.svg" alt="">
+		</article>
+		<article class="client-square">
+			<img src="images/anna-freud-centre-logo.svg" alt="">
+		</article>
+		<article class="client-square">
+			<img src="images/anna-freud-centre-logo.svg" alt="">
 		</article>
 		<article class="client-square">
 			<img src="images/anna-freud-centre-logo.svg" alt="">
@@ -129,10 +142,6 @@
 			<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
 		</div>
 	</section>
-
-
-	
-
 	<script src="javascripts/main.js"></script>
 </body>
 </html>
