adding in inline data in partials to show how to use that; and used the case-study HTML as an example template

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 	</section>
 	
 	<section class="gramble-container">
-		<header class="section-header">
+		<header class="gramble-header">
 			<h1>Gramble</h1>
 			<p class="intropara">This is the Gramble</p>
 		</header>
@@ -101,21 +101,8 @@
 		</a>
 	</section>
 	<section class="client-strip">
-		<header class="section-header">
-			<h1>Selected clients</h1>
-			<p class="intropara">Some of the people we've had the pleasure of working with&hellip;</p>
-		</header>
 		<article class="client-square">
 			<img src="images/warner-music-logo.svg" alt="">
-		</article>
-		<article class="client-square">
-			<img src="images/anna-freud-centre-logo.svg" alt="">
-		</article>
-		<article class="client-square">
-			<img src="images/anna-freud-centre-logo.svg" alt="">
-		</article>
-		<article class="client-square">
-			<img src="images/anna-freud-centre-logo.svg" alt="">
 		</article>
 		<article class="client-square">
 			<img src="images/anna-freud-centre-logo.svg" alt="">
@@ -142,6 +129,10 @@
 			<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
 		</div>
 	</section>
+
+
+	
+
 	<script src="javascripts/main.js"></script>
 </body>
 </html>
