adds round buttons, menu link animation, sticky header

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
 <body>
 	
 	<section class="home-hero">
-		<div class="cover-image-container">
-			
-		</div>
+		<div class="cover-image-container"></div>
+		<a href="#" class="zoom-button">
+			<img src="images/icon-zoom.svg" alt="view study">
+		</a>
+		<a href="#" class="next-button">
+			<img src="images/icon-next.svg" alt="next">
+		</a>
 		<div class="site-header">
 			<header>
 				<h1 class="logo">Penrose.</h1>
@@ -35,6 +39,13 @@
 			<img class="cover-image" src="images/planchette.jpg">
 			<a href="#" class="readmore-link">Read Case</a>
 		</article>
+	</section>
+
+	<section class="sticky-header">
+		<button class="cmn-toggle-switch cmn-toggle-switch__htra">
+        	<span>toggle menu</span>
+        </button>
+		<h1 class="logo">Penrose.</h1>
 	</section>
 	
 	<section class="gramble-container">
@@ -98,6 +109,10 @@
 				</header>
 				<span href="#" class="readmore-link">Open Link</span>
 			</div>
+		</a>
+		<br class="clear-both">
+		<a href="#" class="gramble-morebtn">
+			<img src="images/icon-more.svg" alt="More">
 		</a>
 	</section>
 	<section class="client-strip">
