adds menu styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,150 +4,172 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
-	<section class="home-hero">
-		<div class="cover-image-container"></div>
-		<a href="#" class="zoom-button">
-			<img src="images/icon-zoom.svg" alt="view study">
-		</a>
-		<a href="#" class="next-button">
-			<img src="images/icon-next.svg" alt="next">
-		</a>
-		<div class="site-header">
-			<header>
-				<h1 class="logo">Penrose.</h1>
-				<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
-			</header>
+	<div class="nav-menu">
+		<div class="nav-menu-wrapper">
+			<ul>
+				<li><a href="#">Item</a></li>
+				<li><a href="#">Item</a></li>
+				<li><a href="#">Item</a></li>
+			</ul>
 		</div>
+	</div>
+	<main>
+		<section class="home-hero">
+			<div class="cover-image-container"></div>
+			<a href="#" class="zoom-button">
+				<img src="images/icon-zoom.svg" alt="view study">
+			</a>
+			<a href="#" class="next-button">
+				<img src="images/icon-next.svg" alt="next">
+			</a>
+			<div class="site-header">
+				<header>
+					<button class="cmn-toggle-switch -white cmn-toggle-switch__htra">
+			        	<span>toggle menu</span>
+			        </button>
+					<h1 class="logo">Penrose.</h1>
+					<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
+				</header>
+			</div>
+			
+			<article class="case-study">
+				<header class="article-header">
+					<span class="label">Case Study</span>
+					<h1 class="title">Making personal data into useful data</h1>
+					<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+				</header>
+				<img class="cover-image" src="images/jon-post.jpg">
+				<a href="#" class="readmore-link">Read Case</a>
+			</article>
+
+			<article class="case-study">
+				<header class="article-header">
+					<span class="label">Case Study</span>
+					<h1 class="title">Making personal data into useful data</h1>
+					<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+				</header>
+				<img class="cover-image" src="images/planchette.jpg">
+				<a href="#" class="readmore-link">Read Case</a>
+			</article>
+		</section>
+
+		<section class="sticky-header">
+			<button class="cmn-toggle-switch cmn-toggle-switch__htra">
+	        	<span>toggle menu</span>
+	        </button>
+			<h1 class="logo">Penrose.</h1>
+		</section>
 		
-		<article class="case-study">
-			<header class="article-header">
-				<span class="label">Case Study</span>
-				<h1 class="title">Making personal data into useful data</h1>
-				<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+		<section class="gramble-container">
+			<header class="section-header">
+				<h1>Gramble</h1>
+				<p class="intropara">This is the Gramble</p>
 			</header>
-			<img class="cover-image" src="images/jon-post.jpg">
-			<a href="#" class="readmore-link">Read Case</a>
-		</article>
-
-		<article class="case-study">
-			<header class="article-header">
-				<span class="label">Case Study</span>
-				<h1 class="title">Making personal data into useful data</h1>
-				<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
+			<a class="gramble-item"2>
+				<img class="background-image" src="images/metropolis.jpg">
+				<div class="grambleitem-content">
+					<header class="article-header">
+						<h1 class="title">The Robots Are Coming</h1>
+						<p class="excerpt">John Lanchester on what automation means for economies (and people)</p>
+					</header>
+					<span href="#" class="readmore-link">Open Link</span>
+				</div>
+			</a>
+			<a class="gramble-item"2>
+				<div class="grambleitem-content">
+					<header class="article-header">
+						<h1 class="title">Minimum Viable Audience</h1>
+						<p class="excerpt">Build an audience before you build a business</p>
+					</header>
+					<span href="#" class="readmore-link">Open Link</span>
+				</div>
+			</a>
+			<a class="gramble-item"2>
+				<img class="background-image" src="images/seneca.jpg">
+				<div class="grambleitem-content">
+					<header class="article-header">
+						<h1 class="title">Seneca</h1>
+						<p class="excerpt">Micro-services toolkit for Node.js</p>
+					</header>
+					<span href="#" class="readmore-link">Open Link</span>
+				</div>
+			</a>
+			<a class="gramble-item"2>
+				<div class="grambleitem-content">
+					<header class="article-header">
+						<h1 class="title">Writing code for humans</h1>
+						<p class="excerpt">Writing JavaScript like poetry</p>
+					</header>
+					<span href="#" class="readmore-link">Open Link</span>
+				</div>
+			</a>
+			<a class="gramble-item"2>
+				<img class="background-image" src="images/books.jpg">
+				<div class="grambleitem-content">
+					<header class="article-header">
+						<h1 class="title">Shumpeter: Author-preneurship</h1>
+						<p class="excerpt">How to game best seller lists! Cites Eric Ries' Lean Startup</p>
+					</header>
+					<span href="#" class="readmore-link">Open Link</span>
+				</div>
+			</a>
+			<a class="gramble-item"2>
+				<div class="grambleitem-content">
+					<header class="article-header">
+						<h1 class="title">Prose.io</h1>
+						<p class="excerpt">A content editor for GitHub</p>
+					</header>
+					<span href="#" class="readmore-link">Open Link</span>
+				</div>
+			</a>
+			<br class="clear-both">
+			<a href="#" class="gramble-morebtn">
+				<img src="images/icon-more.svg" alt="More">
+			</a>
+		</section>
+		<section class="client-strip">
+			<header class="section-header">
+				<h1>Selected clients</h1>
+				<p class="intropara">Some of the people we've had the pleasure of working with&hellip;</p>
 			</header>
-			<img class="cover-image" src="images/planchette.jpg">
-			<a href="#" class="readmore-link">Read Case</a>
-		</article>
-	</section>
-
-	<section class="sticky-header">
-		<button class="cmn-toggle-switch cmn-toggle-switch__htra">
-        	<span>toggle menu</span>
-        </button>
-		<h1 class="logo">Penrose.</h1>
-	</section>
-	
-	<section class="gramble-container">
-		<header class="gramble-header">
-			<h1>Gramble</h1>
-			<p class="intropara">This is the Gramble</p>
-		</header>
-		<a class="gramble-item"2>
-			<img class="background-image" src="images/metropolis.jpg">
-			<div class="grambleitem-content">
-				<header class="article-header">
-					<h1 class="title">The Robots Are Coming</h1>
-					<p class="excerpt">John Lanchester on what automation means for economies (and people)</p>
-				</header>
-				<span href="#" class="readmore-link">Open Link</span>
+			<article class="client-square">
+				<img src="images/warner-music-logo.svg" alt="">
+			</article>
+			<article class="client-square">
+				<img src="images/anna-freud-centre-logo.svg" alt="">
+			</article>
+			<article class="client-square">
+				<img src="images/anna-freud-centre-logo.svg" alt="">
+			</article>
+			<article class="client-square">
+				<img src="images/anna-freud-centre-logo.svg" alt="">
+			</article>
+			<article class="client-square">
+				<img src="images/anna-freud-centre-logo.svg" alt="">
+			</article>
+		</section>
+		<section class="footer-strip">
+			<ul class="footer-menu">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Work</a></li>
+				<li><a href="#">Content</a></li>
+				<li><a href="#">Stimulation</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+			<p class="footer-details">
+				© Penrose Studio Ltd <br>
+				B&amp;W Building, 74 Rivington St, London EC2A 3AY <br>
+				Company number: 06947690
+			</p>
+			<div class="footer-contactbox">
+				<h2>Talk to us</h2>
+				<p>We're always interested in hearing about new ideas, and we care about making good things happen. So get in touch to talk about your project.</p>
+				<a href="tel:000" class="phone-number">0788 4421 348</a><br>
+				<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
 			</div>
-		</a>
-		<a class="gramble-item"2>
-			<div class="grambleitem-content">
-				<header class="article-header">
-					<h1 class="title">Minimum Viable Audience</h1>
-					<p class="excerpt">Build an audience before you build a business</p>
-				</header>
-				<span href="#" class="readmore-link">Open Link</span>
-			</div>
-		</a>
-		<a class="gramble-item"2>
-			<img class="background-image" src="images/seneca.jpg">
-			<div class="grambleitem-content">
-				<header class="article-header">
-					<h1 class="title">Seneca</h1>
-					<p class="excerpt">Micro-services toolkit for Node.js</p>
-				</header>
-				<span href="#" class="readmore-link">Open Link</span>
-			</div>
-		</a>
-		<a class="gramble-item"2>
-			<div class="grambleitem-content">
-				<header class="article-header">
-					<h1 class="title">Writing code for humans</h1>
-					<p class="excerpt">Writing JavaScript like poetry</p>
-				</header>
-				<span href="#" class="readmore-link">Open Link</span>
-			</div>
-		</a>
-		<a class="gramble-item"2>
-			<img class="background-image" src="images/books.jpg">
-			<div class="grambleitem-content">
-				<header class="article-header">
-					<h1 class="title">Shumpeter: Author-preneurship</h1>
-					<p class="excerpt">How to game best seller lists! Cites Eric Ries' Lean Startup</p>
-				</header>
-				<span href="#" class="readmore-link">Open Link</span>
-			</div>
-		</a>
-		<a class="gramble-item"2>
-			<div class="grambleitem-content">
-				<header class="article-header">
-					<h1 class="title">Prose.io</h1>
-					<p class="excerpt">A content editor for GitHub</p>
-				</header>
-				<span href="#" class="readmore-link">Open Link</span>
-			</div>
-		</a>
-		<br class="clear-both">
-		<a href="#" class="gramble-morebtn">
-			<img src="images/icon-more.svg" alt="More">
-		</a>
-	</section>
-	<section class="client-strip">
-		<article class="client-square">
-			<img src="images/warner-music-logo.svg" alt="">
-		</article>
-		<article class="client-square">
-			<img src="images/anna-freud-centre-logo.svg" alt="">
-		</article>
-	</section>
-	<section class="footer-strip">
-		<ul class="footer-menu">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Work</a></li>
-			<li><a href="#">Content</a></li>
-			<li><a href="#">Stimulation</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-		<p class="footer-details">
-			© Penrose Studio Ltd <br>
-			B&amp;W Building, 74 Rivington St, London EC2A 3AY <br>
-			Company number: 06947690
-		</p>
-		<div class="footer-contactbox">
-			<h2>Talk to us</h2>
-			<p>We're always interested in hearing about new ideas, and we care about making good things happen. So get in touch to talk about your project.</p>
-			<a href="tel:000" class="phone-number">0788 4421 348</a><br>
-			<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
-		</div>
-	</section>
-
-
-	
-
+		</section>
+	</main>
 	<script src="javascripts/main.js"></script>
 </body>
 </html>
