adds header styles, button animations, case study nav

--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,23 @@
 	<div class="nav-menu">
 		<div class="nav-menu-wrapper">
 			<ul>
-				<li><a href="#">Item</a></li>
-				<li><a href="#">Item</a></li>
-				<li><a href="#">Item</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Work</a></li>
+				<li><a href="#">Content</a></li>
+				<li><a href="#">Stimulation</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</div>
 	</div>
 	<main>
 		<section class="home-hero">
 			<div class="cover-image-container"></div>
+			<div class="casestudy-nav">
+				<a href="#" class="previous disabled">Prev</a>
+				<a href="#" class="viewcase">View Case</a>
+				<a href="#" class="next">Next</a>
+			</div>
 			<a href="#" class="zoom-button">
 				<img src="images/icon-zoom.svg" alt="view study">
 			</a>
