adds gulp preprocess, changes svgs, makes IE10 compat

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
 				<a href="#" class="next">Next</a>
 			</div>
 			<a href="#" class="zoom-button">
-				<img src="images/icon-zoom.svg" alt="view study">
+				<!-- @include images/icon-zoom.svg -->
 			</a>
 			<a href="#" class="next-button">
-				<img src="images/icon-next.svg" alt="next">
+				<!-- @include images/icon-next.svg -->
 			</a>
 			<div class="site-header">
 				<header>
@@ -132,7 +132,7 @@
 			</a>
 			<br class="clear-both">
 			<a href="#" class="gramble-morebtn">
-				<img src="images/icon-more.svg" alt="More">
+				<!-- @include images/icon-more.svg -->
 			</a>
 		</section>
 		<section class="client-strip">
@@ -141,19 +141,19 @@
 				<p class="intropara">Some of the people we've had the pleasure of working with&hellip;</p>
 			</header>
 			<article class="client-square">
-				<img src="images/warner-music-logo.svg" alt="">
+					<!-- @include images/warner-music-logo.svg -->
 			</article>
 			<article class="client-square">
-				<img src="images/anna-freud-centre-logo.svg" alt="">
+					<!-- @include images/anna-freud-centre-logo.svg -->
 			</article>
 			<article class="client-square">
-				<img src="images/anna-freud-centre-logo.svg" alt="">
+					<!-- @include images/ctrlio-logo.svg -->
 			</article>
 			<article class="client-square">
-				<img src="images/anna-freud-centre-logo.svg" alt="">
+					<!-- @include images/anna-freud-centre-logo.svg -->
 			</article>
 			<article class="client-square">
-				<img src="images/anna-freud-centre-logo.svg" alt="">
+					<!-- @include images/anna-freud-centre-logo.svg -->
 			</article>
 		</section>
 		<section class="footer-strip">
