adds service list, removes silly scrollbar

--- a/src/case-study.html
+++ b/src/case-study.html
@@ -51,6 +51,18 @@
 		<div class="casestudy-body">
 			<p>More text blah blah blah etc. Penrose acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started.</p>
 			<p>In agile cycles of learning and development, we helped them raise funding, demonstrate progress to investors and create an automated web app that enables people to use their mobile bills to find a better contract.</p>
+			<hr>
+			<h2>Services provided by Penrose</h2>
+			<ul class="service-list">
+				<li class="service">CTO as a service</li>
+				<li class="service">Microservice technical architecture</li>
+				<li class="service">Web App development</li>
+				<li class="service">Data scraping</li>
+				<li class="service">User Experience</li>
+				<li class="service">Information Architecture</li>
+				<li class="service">User Interface Design</li>
+				<li class="service">Product Design</li>
+			</ul>
 		</div>
 		</section>
 		<section class="footer-strip">
