starts creating dynamic templates

--- a/src/pattern-book.html
+++ b/src/pattern-book.html
@@ -1,8 +1,6 @@
 {{>header}}
-    <h1>Pets list</h1>
-    {{>pets-list}}
-    <h1>Pet table</h1>
-    {{>table}}
-    <h1>Pet edit form</h1>
-    {{>form}}
+{{>nav-menu}}
+{{>home-hero}}
 {{>footer}}
+
+<!-- @include images/icon-zoom.svg -->
