simplified HTML step in gulpfile: combined templates and pages tasks; what happens now is that all HTML files in the src folder are rendered, and then they are preprocessed, before being copied to the build folder, with the folder structure intact

--- a/src/case-study.html
+++ b/src/case-study.html
@@ -46,7 +46,7 @@
 				<h1>Gallery</h1>
 				<p class="intropara">Some additional pics &amp; captions</p>
 			</header>
-			<img src="images/jon-post.jpg" alt="">
+			<img src="/images/jon-post.jpg" alt="">
 		</div>
 		<div class="casestudy-body">
 			<p>More text blah blah blah etc. Penrose acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started.</p>
