--- a/src/category-index.html
+++ b/src/category-index.html
@@ -29,9 +29,9 @@
 				<p class="intropara">The best way to see what we do is to check out what we've done so far.</p>
 			</header>
 			<a class="gramble-item"2>
-				<img class="background-image" src="images/jon-post-sq.jpg">
+				<img class="background-image" src="/images/jon-post-sq.jpg">
 				<div class="grambleitem-content">
-					<img src="images/ctrlio-logo.svg" alt="" class="logo">
+					<img src="/images/ctrlio-logo.svg" alt="" class="logo">
 					<header class="article-header">
 						<h1 class="title">Making personal data into useful data</h1>
 						<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started.</p>
@@ -49,7 +49,7 @@
 				</div>
 			</a>
 			<a class="gramble-item"2>
-				<img class="background-image" src="images/seneca.jpg">
+				<img class="background-image" src="/images/seneca.jpg">
 				<div class="grambleitem-content">
 					<header class="article-header">
 						<h1 class="title">Seneca</h1>
@@ -68,7 +68,7 @@
 				</div>
 			</a>
 			<a class="gramble-item"2>
-				<img class="background-image" src="images/books.jpg">
+				<img class="background-image" src="/images/books.jpg">
 				<div class="grambleitem-content">
 					<header class="article-header">
 						<h1 class="title">Shumpeter: Author-preneurship</h1>
@@ -88,7 +88,7 @@
 			</a>
 			<br class="clear-both">
 			<a href="#" class="gramble-morebtn">
-				<img src="images/icon-more.svg" alt="More">
+				<img src="/images/icon-more.svg" alt="More">
 			</a>
 		</section>
 		<section class="footer-strip">
@@ -113,6 +113,6 @@
 			</div>
 		</section>
 	</main>
-	<script src="javascripts/main.js"></script>
+	<script src="/javascripts/main.js"></script>
 </body>
 </html>
