--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 					<h1 class="title">Making personal data into useful data</h1>
 					<p class="excerpt">We acted as CTRLio’s CTO and product team, providing the support, knowledge and skills they needed to get their company started. </p>
 				</header>
-				<img class="cover-image" src="images/jon-post.jpg">
+				<img class="cover-image" src="/images/jon-post.jpg">
 				<a href="#" class="readmore-link">Read Case</a>
 			</article>
 
@@ -115,7 +115,7 @@
 				<img class="background-image" src="images/books.jpg">
 				<div class="grambleitem-content">
 					<header class="article-header">
-						<h1 class="title">Shumpeter: Author-preneurship</h1>
+						<h1 class="title">Schumpeter: Author-preneurship</h1>
 						<p class="excerpt">How to game best seller lists! Cites Eric Ries' Lean Startup</p>
 					</header>
 					<span href="#" class="readmore-link">Open Link</span>
